added style to input field and buttons

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -7,10 +7,12 @@ $vlight-gray: #ededed; //screen background
 //keys
 $dark-cyan: #377f86; //key background
 $vdark-cyan: #1b5f65; //key shadow
+$light-cyan: #6ca5ab;
 $orange: #ca5502; //keybackground
 $dark-orange: #893901; //key shadow
 $light-grayish-yellow: #e5e4e1; //keybackground
-$dark-grayush-orange: #a69d91; //key shadow
+$dark-grayish-orange: #a69d91; //key shadow
+$light-orange: #e8823a;
 
 //text
 $vdark-grayish-yellow: #35352c;
@@ -18,7 +20,8 @@ $white: #ffffff;
 
 //- Font size (numbers): 32px
 //font-weight 700
-
+$extra-small: 0.5rem;
 $small: 0.75rem;
 $medium: 1rem;
 $large: 1.25rem;
+$extra-large: 1.5rem;
