--- a/src/index.scss
+++ b/src/index.scss
@@ -18,9 +18,10 @@ body {
 }
 
 .app {
-  width: 550px;
-  height: 600px;
+  width: 450px;
+  height: 500px;
   background-color: $vlight-gray;
   border-radius: $small;
   padding-top: $small;
+  color: $vdark-grayish-yellow;
 }
